# logbot

./: .gitignore  MANIFEST.in  setup.cfg
logbot/: __main__.py  main.py
logbot/lib/: enums.py
tests/: logbot_test.py
